# tinyDS

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  bump_version.sh  ds_stack.c
src/: CMakeLists.txt  README.md  tds_queue.c  tds_stack.c
src/include/: tds_queue.h  tds_stack.h  version.h
tests/: CMakeLists.txt  test_main.c
